use acm as publisher

--- a/bbt.bib
+++ b/bbt.bib
@@ -58,7 +58,7 @@
   title      = {Verifying Quantum Circuits with Level-Synchronized Tree Automata},
   year       = {2025},
   issue_date = {January 2025},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {9},
   number     = {POPL},
@@ -224,7 +224,7 @@
   title      = {Linear and Non-linear Relational Analyses for Quantum Program Optimization},
   year       = {2025},
   issue_date = {January 2025},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {9},
   number     = {POPL},
@@ -411,7 +411,7 @@
   title      = {An Algebraic Language for Specifying Quantum Networks},
   year       = {2024},
   issue_date = {June 2024},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {8},
   number     = {PLDI},
@@ -431,7 +431,7 @@
   title      = {MarQSim: Reconciling Determinism and Randomness in Compiler Optimization for Quantum Simulation},
   year       = {2025},
   issue_date = {June 2025},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {9},
   number     = {PLDI},
@@ -451,7 +451,7 @@
   title      = {How to Bake a Quantum Π},
   year       = {2024},
   issue_date = {August 2024},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {8},
   number     = {ICFP},
@@ -641,7 +641,7 @@
   title      = {Flexible Type-Based Resource Estimation in Quantum Circuit Description Languages},
   year       = {2025},
   issue_date = {January 2025},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {9},
   number     = {POPL},
@@ -941,7 +941,7 @@
   title      = {Symbolic Execution for Quantum Error Correction Programs},
   year       = {2024},
   issue_date = {June 2024},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {8},
   number     = {PLDI},
@@ -1393,7 +1393,7 @@
   title      = {Qurts: Automatic Quantum Uncomputation by Affine Types with Lifetime},
   year       = {2025},
   issue_date = {January 2025},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {9},
   number     = {POPL},
@@ -1449,7 +1449,7 @@
   title      = {Efficient Formal Verification of Quantum Error Correcting Programs},
   year       = {2025},
   issue_date = {June 2025},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {9},
   number     = {PLDI},
@@ -1556,7 +1556,7 @@
   title      = {Quantum Probabilistic Model Checking for Time-Bounded Properties},
   year       = {2024},
   issue_date = {October 2024},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {8},
   number     = {OOPSLA2},
@@ -1629,7 +1629,7 @@
   title      = {Statistical Testing of Quantum Programs via Fixed-Point Amplitude Amplification},
   year       = {2024},
   issue_date = {October 2024},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {8},
   number     = {OOPSLA2},
@@ -1843,7 +1843,7 @@
   title      = {A Haskell Adiabatic DSL: Solving Classical Optimization Problems on Quantum Hardware},
   year       = {2025},
   issue_date = {August 2025},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {9},
   number     = {ICFP},
@@ -1985,7 +1985,7 @@
   title      = {Dependency-Aware Compilation for Surface Code Quantum Architectures},
   year       = {2025},
   issue_date = {April 2025},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {9},
   number     = {OOPSLA1},
@@ -2167,7 +2167,7 @@
   title      = {Synthetiq: Fast and Versatile Quantum Circuit Synthesis},
   year       = {2024},
   issue_date = {April 2024},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {8},
   number     = {OOPSLA1},
@@ -2273,7 +2273,7 @@
   title      = {QbC: Quantum Correctness by Construction},
   year       = {2025},
   issue_date = {April 2025},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {9},
   number     = {OOPSLA1},
@@ -2700,7 +2700,7 @@
   title      = {Optimizing Ancilla-Based Quantum Circuits with SPARE},
   year       = {2025},
   issue_date = {June 2025},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {9},
   number     = {PLDI},
@@ -2973,7 +2973,7 @@
   title      = {QVM: Quantum Gate Virtualization Machine},
   year       = {2025},
   issue_date = {June 2025},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {9},
   number     = {PLDI},
@@ -3086,7 +3086,7 @@
   title      = {Modular Synthesis of Efficient Quantum Uncomputation},
   year       = {2024},
   issue_date = {October 2024},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {8},
   number     = {OOPSLA2},
@@ -3487,7 +3487,7 @@
   title      = {Quantum Control Machine: The Limits of Control Flow in Quantum Programming},
   year       = {2024},
   issue_date = {April 2024},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {8},
   number     = {OOPSLA1},
@@ -3507,7 +3507,7 @@
   title      = {Quantum Register Machine: Efficient Implementation of Quantum Recursive Programs},
   year       = {2025},
   issue_date = {June 2025},
-  publisher  = {Association for Computing Machinery},
+  publisher  = acm,
   address    = {New York, NY, USA},
   volume     = {9},
   number     = {PLDI},
