--- a/biblatex.bib
+++ b/biblatex.bib
@@ -62,7 +62,7 @@
   title        = {Verifying Quantum Circuits with Level-Synchronized Tree Automata},
   year         = {2025},
   issue_date   = {January 2025},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {9},
   number       = {POPL},
@@ -218,7 +218,7 @@
   title        = {Linear and Non-linear Relational Analyses for Quantum Program Optimization},
   year         = {2025},
   issue_date   = {January 2025},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {9},
   number       = {POPL},
@@ -391,7 +391,7 @@
   title        = {An Algebraic Language for Specifying Quantum Networks},
   year         = {2024},
   issue_date   = {June 2024},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {8},
   number       = {PLDI},
@@ -411,7 +411,7 @@
   title        = {MarQSim: Reconciling Determinism and Randomness in Compiler Optimization for Quantum Simulation},
   year         = {2025},
   issue_date   = {June 2025},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {9},
   number       = {PLDI},
@@ -431,7 +431,7 @@
   title        = {How to Bake a Quantum Π},
   year         = {2024},
   issue_date   = {August 2024},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {8},
   number       = {ICFP},
@@ -605,7 +605,7 @@
   title        = {Flexible Type-Based Resource Estimation in Quantum Circuit Description Languages},
   year         = {2025},
   issue_date   = {January 2025},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {9},
   number       = {POPL},
@@ -882,7 +882,7 @@
   title        = {Symbolic Execution for Quantum Error Correction Programs},
   year         = {2024},
   issue_date   = {June 2024},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {8},
   number       = {PLDI},
@@ -1298,7 +1298,7 @@
   title        = {Qurts: Automatic Quantum Uncomputation by Affine Types with Lifetime},
   year         = {2025},
   issue_date   = {January 2025},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {9},
   number       = {POPL},
@@ -1351,7 +1351,7 @@
   title        = {Efficient Formal Verification of Quantum Error Correcting Programs},
   year         = {2025},
   issue_date   = {June 2025},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {9},
   number       = {PLDI},
@@ -1450,7 +1450,7 @@
   title        = {Quantum Probabilistic Model Checking for Time-Bounded Properties},
   year         = {2024},
   issue_date   = {October 2024},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {8},
   number       = {OOPSLA2},
@@ -1518,7 +1518,7 @@
   title        = {Statistical Testing of Quantum Programs via Fixed-Point Amplitude Amplification},
   year         = {2024},
   issue_date   = {October 2024},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {8},
   number       = {OOPSLA2},
@@ -1711,7 +1711,7 @@
   title        = {A Haskell Adiabatic DSL: Solving Classical Optimization Problems on Quantum Hardware},
   year         = {2025},
   issue_date   = {August 2025},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {9},
   number       = {ICFP},
@@ -1842,7 +1842,7 @@
   title        = {Dependency-Aware Compilation for Surface Code Quantum Architectures},
   year         = {2025},
   issue_date   = {April 2025},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {9},
   number       = {OOPSLA1},
@@ -2012,7 +2012,7 @@
   title        = {Synthetiq: Fast and Versatile Quantum Circuit Synthesis},
   year         = {2024},
   issue_date   = {April 2024},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {8},
   number       = {OOPSLA1},
@@ -2114,7 +2114,7 @@
   title        = {QbC: Quantum Correctness by Construction},
   year         = {2025},
   issue_date   = {April 2025},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {9},
   number       = {OOPSLA1},
@@ -2512,7 +2512,7 @@
   title        = {Optimizing Ancilla-Based Quantum Circuits with SPARE},
   year         = {2025},
   issue_date   = {June 2025},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {9},
   number       = {PLDI},
@@ -2762,7 +2762,7 @@
   title        = {QVM: Quantum Gate Virtualization Machine},
   year         = {2025},
   issue_date   = {June 2025},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {9},
   number       = {PLDI},
@@ -2866,7 +2866,7 @@
   title        = {Modular Synthesis of Efficient Quantum Uncomputation},
   year         = {2024},
   issue_date   = {October 2024},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {8},
   number       = {OOPSLA2},
@@ -3231,7 +3231,7 @@
   title        = {Quantum Control Machine: The Limits of Control Flow in Quantum Programming},
   year         = {2024},
   issue_date   = {April 2024},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {8},
   number       = {OOPSLA1},
@@ -3251,7 +3251,7 @@
   title        = {Quantum Register Machine: Efficient Implementation of Quantum Recursive Programs},
   year         = {2025},
   issue_date   = {June 2025},
-  publisher    = {Association for Computing Machinery},
+  publisher    = acm,
   address      = {New York, NY, USA},
   volume       = {9},
   number       = {PLDI},
