add pages for eid in bib file

--- a/bbt.bib
+++ b/bbt.bib
@@ -66,6 +66,7 @@
   journal   = pacmpl,
   month     = jan,
   eid       = {32},
+  pages     = {32},
   numpages  = {31},
   keywords  = {quantum circuits, tree automata, verification},
   webnote   = {POPL '25},
@@ -231,6 +232,7 @@
   journal   = pacmpl,
   month     = jan,
   eid       = {37},
+  pages     = {37},
   numpages  = {32},
   keywords  = {Quantum software, compiler optimization, data flow analysis, invariant generation, relational program analysis},
   webnote   = {POPL '25},
@@ -417,6 +419,7 @@
   journal   = pacmpl,
   month     = jun,
   eid       = {200},
+  pages     = {200},
   numpages  = {23},
   keywords  = {Kleene algebra, quantum networks, entanglement},
   webnote   = {PLDI '24},
@@ -436,6 +439,7 @@
   journal   = pacmpl,
   month     = jun,
   eid       = {170},
+  pages     = {170},
   numpages  = {25},
   keywords  = {Hamiltonian Simulation, Markov Chain, Minimum-Cost Flow Model, Quantum Computing},
   webnote   = {PLDI '25},
@@ -455,6 +459,7 @@
   journal   = pacmpl,
   month     = aug,
   eid       = {236},
+  pages     = {236},
   numpages  = {29},
   keywords  = {quantum programming language, reversible computing, rig category, unitary quantum computing},
   webnote   = {ICFP '24},
@@ -556,7 +561,7 @@
   volume    = {6},
   number    = {POPL},
   eid       = {6},
-  page      = {6},
+  pages     = {6},
   doi       = {10.1145/3498667},
   url       = {https://github.com/vikraman/popl22-symmetries-artifact},
   abstract  = {The Pi family of reversible programming languages for boolean circuits is presented as a syntax of combinators witnessing type isomorphisms of algebraic data types. In this paper, we give a denotational semantics for this language, using weak groupoids {\`a} la Homotopy Type Theory, and show how to derive an equational theory for it, presented by 2-combinators witnessing equivalences of type isomorphisms. We establish a correspondence between the syntactic groupoid of the language and a formally presented univalent subuniverse of finite types. The correspondence relates 1-combinators to 1-paths, and 2-combinators to 2-paths in the universe, which is shown to be sound and complete for both levels, forming an equivalence of groupoids. We use this to establish a Curry-Howard-Lambek correspondence between Reversible Logic, Reversible Programming Languages, and Symmetric Rig Groupoids, by showing that the syntax of Pi is presented by the free symmetric rig groupoid, given by finite sets and bijections. Using the formalisation of our results, we perform normalisation-by-evaluation, verification and synthesis of reversible logic gates, motivated by examples from quantum computing. We also show how to reason about and transfer theorems between different representations of reversible circuits.},
@@ -644,6 +649,7 @@
   journal   = pacmpl,
   month     = jan,
   eid       = {47},
+  pages     = {47},
   numpages  = {31},
   keywords  = {Effects, Lambda Calculus, Quantum Computing, Quipper, Refinement Types},
   webnote   = {POPL '25},
@@ -943,6 +949,7 @@
   journal   = pacmpl,
   month     = jun,
   eid       = {189},
+  pages     = {189},
   numpages  = {26},
   keywords  = {symbolic execution, stabilizer formalism},
   webnote   = {PLDI '24},
@@ -1394,6 +1401,7 @@
   journal   = pacmpl,
   month     = jan,
   eid       = {6},
+  pages     = {6},
   numpages  = {28},
   keywords  = {Affine Type, Lifetime, Linear Type, Quantum Programming, Rust, Uncomputation},
   webnote   = {POPL '25},
@@ -1449,6 +1457,7 @@
   journal   = pacmpl,
   month     = jun,
   eid       = {190},
+  pages     = {190},
   numpages  = {26},
   keywords  = {Formal verification, Hoare logic, Quantum error correction, Quantum programming language},
   webnote   = {PLDI '25},
@@ -1555,6 +1564,7 @@
   journal   = pacmpl,
   month     = oct,
   eid       = {291},
+  pages     = {291},
   numpages  = {31},
   keywords  = {bounded reachability, probabilistic model checking, quantum computing},
   webnote   = {OOPSLA '24},
@@ -1627,6 +1637,7 @@
   journal   = pacmpl,
   month     = oct,
   eid       = {276},
+  pages     = {276},
   numpages  = {25},
   keywords  = {Quantum Computing, Quantum Programming, Testing, Verification},
   webnote   = {OOPSLA '24},
@@ -1840,6 +1851,7 @@
   journal   = pacmpl,
   month     = aug,
   eid       = {252},
+  pages     = {252},
   numpages  = {31},
   keywords  = {Adiabatic Quantum Computation, Energy Constraint Computation, Functional Programming},
   webnote   = {ICFP '25},
@@ -1981,6 +1993,7 @@
   journal   = pacmpl,
   month     = apr,
   eid       = {82},
+  pages     = {82},
   numpages  = {28},
   keywords  = {quantum error-correction, simulated annealing},
   webnote   = {OOPSLA '25},
@@ -2162,6 +2175,7 @@
   journal   = pacmpl,
   month     = apr,
   eid       = {96},
+  pages     = {96},
   numpages  = {28},
   keywords  = {Quantum Circuits, Synthesis, Clifford+T},
   webnote   = {OOPSLA '24},
@@ -2267,6 +2281,7 @@
   journal   = pacmpl,
   month     = apr,
   eid       = {99},
+  pages     = {99},
   numpages  = {29},
   keywords  = {correctness by construction, quantum Hoare logic, quantum while language},
   webnote   = {OOSPLA '25},
@@ -2693,6 +2708,7 @@
   journal   = pacmpl,
   month     = jun,
   eid       = {154},
+  pages     = {154},
   numpages  = {25},
   keywords  = {quantum optimizing compilers, quantum programming languages},
   webnote   = {PLDI '25},
@@ -2965,6 +2981,7 @@
   journal   = pacmpl,
   month     = jun,
   eid       = {187},
+  pages     = {187},
   numpages  = {26},
   keywords  = {Circuit Cutting, Quantum Circuit Optimization and Compilation},
   webnote   = {PLDI '25},
@@ -3077,6 +3094,7 @@
   journal   = pacmpl,
   month     = oct,
   eid       = {345},
+  pages     = {345},
   numpages  = {28},
   keywords  = {intermediate representations, quantum programming languages},
   webnote   = {OOPSLA '24},
@@ -3477,6 +3495,7 @@
   journal   = pacmpl,
   month     = apr,
   eid       = {94},
+  pages     = {94},
   numpages  = {28},
   keywords  = {quantum programming languages, quantum instruction set architectures},
   webnote   = {OOPSLA '24},
@@ -3496,6 +3515,7 @@
   journal   = pacmpl,
   month     = jun,
   eid       = {180},
+  pages     = {180},
   numpages  = {26},
   keywords  = {automatic parallelisation, compilation, partial evaluation, quantum architectures, quantum programming languages, recursive definition},
   webnote   = {PLDI '25},
